--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body{
     justify-content: center;
     margin-left: 210px;
     margin-right: 210px;
-
+   
 }
 .box{
     box-shadow: 0px 0px 12px  rgb(191, 174, 174);
@@ -120,4 +120,59 @@ body{
 }
 .section-two-footer .fa-arrow{
     color: aquamarine;
+}
+.third-section{
+    display: flex;
+    margin-top: 100px;
+    
+    margin-left: 165px;
+    margin-right: 199px;
+  
+}
+.img-info{
+    margin-left: 50px;
+}
+.img-info h2{
+    font-size: 25px;
+    font-weight: 700;
+}
+.img-info button{
+    background-color: rgb(196, 45, 110);
+    color: white;
+    font-weight: 700;
+    padding: 8px 28px;
+    border-radius: 20px;
+    border: 1px solid rgb(196, 45, 110);
+    text-transform: capitalize;
+}
+footer{
+    margin-top: 50px;
+    background-color: black;
+    text-align: center;
+ padding: 30px;
+
+}
+.footer-info{
+    color: white;
+}
+.footer-info h2{
+    font-weight: 700;
+    font-size: 15px;
+}
+.footer-info p{
+    font-size: 10px;
+    font-weight: 700;
+}
+.fa-brands{
+    color: gold;
+}
+.social{
+    display: flex;
+    justify-content: center;
+    margin: 0px 10px;
+    
+    
+}
+.social,.insta,.twiter ,.facebook{
+    margin-right: 20px;
 }
