--- a/style.css
+++ b/style.css
@@ -74,6 +74,8 @@ body{
    border-top: 1px solid gray;
    border-bottom: 1px solid gray;
    margin-bottom: 50px;
+   /* margin-left: 165px;
+   margin-right: 165px; */
    
   
 }
@@ -156,7 +158,7 @@ footer{
     margin-top: 50px;
     background-color: black;
     text-align: center;
- padding: 30px;
+    padding: 30px;
 
 }
 .footer-info{
@@ -185,4 +187,22 @@ footer{
 }
 .icons{
     color: rgb(200, 18, 130);
+}
+@media screen and (max-width:600px) {
+    .second-section{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .first-section{
+      flex-direction: column-reverse;
+    }
+.busisnessman{
+    flex-direction:  row;
+    flex-wrap: wrap;
+}
+.third-section{
+flex-direction: column;
+}
+.menu-list{
+    flex-direction: column;
+}
 }
